# xin

./: xin.cabal
.github/workflows/: build.yml
src/internal/: AsList.hs  Change.hs  Roundable.hs  Value.hs  Wrapped.hs
src/internal/Algebra/: Apportion.hs  ExactBounded.hs  NewApportion.hs
src/internal/Algebra/Apportion/: Balanced.hs  MonoidMap.hs  Natural.hs
src/internal/Algebra/Apportion/Old/: Apportion.hs  Balanced.hs  Natural.hs
src/internal/Algebra/PartialOrd/: Extended.hs
src/internal/Data/: SizeDivisible.hs  Sized.hs  Sliceable.hs
src/internal/Data/Foldable/: Extended.hs
src/internal/Data/Function/: Extended.hs
src/internal/Data/List/: Fraction.hs
src/internal/Data/List/NonEmpty/: Extended.hs
src/internal/Data/Monoid/Monus/: Extended.hs
src/internal/Data/Sliceable/: Fractional.hs
src/internal/Data/Traversable/: Extended.hs
src/internal/Test/QuickCheck/Instances/: NonEmpty.hs
src/prelude/Internal/: Prelude.hs
src/terminal/: Main.hs
src/test/: ChangeSpec.hs  ValueSpec.hs
src/test/Algebra/: ApportionSpec.hs
src/test/Algebra/Apportion/: BalancedSpec.hs
src/test/Algebra/Apportion/Old/: ApportionSpec.hs  BalancedSpec.hs
src/test/Data/List/: FractionSpec.hs
src/test/Test/Hspec/: Unit.hs
src/test/Test/QuickCheck/: Extended.hs
src/test/Test/QuickCheck/Classes/: Hspec.hs
src/test/Test/QuickCheck/Instances/: NonEmpty.hs
