cabal-version:  3.0
name:           xin
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/xin/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Experimental
synopsis:       Experimental algorithms
description:
    Experimental algorithms.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/xin

library
    import:
        common-extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Lib
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , xin:internal

library examples
    import:
        common-extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , xin

library internal
    import:
        common-extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Algebra.Apportion
        Algebra.Apportion.Balanced
        Algebra.Apportion.Natural
        AsList
        Change
        Data.Foldable.Extended
        Data.Function.Extended
        Data.List.NonEmpty.Extended
        Value
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , int-cast
      , monoid-subclasses
      , monoidmap
      , QuickCheck
      , quickcheck-classes
      , quickcheck-instances
      , safe
      , semialign
      , these

test-suite test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Algebra.ApportionSpec
        Algebra.Apportion.BalancedSpec
        ChangeSpec
        Test.Hspec.Unit
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Instances.NonEmpty
        ValueSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , hspec
      , hspec-core
      , pretty-show
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups
      , quickcheck-monoid-subclasses
      , quickcheck-quid
      , safe
      , xin
      , xin:internal

benchmark benchmark
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    ghc-options:
        -O2
    build-depends:
      , base >=4.7 && <5
      , tasty-bench
      , tasty-hunit
      , xin:internal
