cabal-version:  3.4
name:           xin
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/xin/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Experimental
synopsis:       Experimental algorithms
description:
    Experimental algorithms.

extra-source-files:
    README.md

flag development
    description: Enable -Werror -O0
    default:     True
    manual:      True

flag release
    description: Enable -Werror -O2
    default:     False
    manual:      True

flag parallel
    description: Enable faster builds
    default:     True
    manual:      True

common common-extensions
    default-extensions:
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        NamedFieldPuns
        PatternSynonyms
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

common common-options
    ghc-options: -Wall
    if flag(development)
        ghc-options: -Werror -O0
    if flag(release)
        ghc-options: -Werror -O2
    if flag(parallel)
        ghc-options: -j +RTS -A256m -n4m -RTS

common common-prelude
    build-depends:
        xin:prelude
    mixins:
        base hiding (Prelude)
      , xin:prelude (Internal.Prelude as Prelude)
    default-extensions:
        RebindableSyntax
        ImplicitPrelude

source-repository head
    type: git
    location: https://github.com/jonathanknowles/xin

library
    import:
        common-extensions
      , common-options
      , common-prelude
    hs-source-dirs:
        src/public
    exposed-modules:
        Lib
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , xin:internal

library examples
    import:
        common-extensions
      , common-options
      , common-prelude
    hs-source-dirs:
        src/examples
    exposed-modules:
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , xin

library internal
    import:
        common-extensions
      , common-options
      , common-prelude
    hs-source-dirs:
        src/internal
    exposed-modules:
        Algebra.Apportion
        Algebra.Apportion.Old.Apportion
        Algebra.Apportion.Old.Balanced
        Algebra.Apportion.Old.Natural
        Algebra.ExactBounded
        Algebra.PartialOrd.Extended
        AsList
        Change
        Data.Foldable.Extended
        Data.Function.Extended
        Data.List.Fraction
        Data.List.NonEmpty.Extended
        Data.Monoid.Monus.Extended
        Data.Sliceable
        Data.Sliceable.Fractional
        Data.Traversable.Extended
        Test.QuickCheck.Instances.NonEmpty
        Value
        Wrapped
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , generic-data
      , groups
      , int-cast
      , lattices
      , monoid-subclasses
      , monoidmap
      , QuickCheck
      , quickcheck-classes
      , quickcheck-instances
      , quiet
      , safe
      , semialign
      , semigroupoids
      , these

library prelude
    import:
        common-extensions
      , common-options
    hs-source-dirs:
        src/prelude
    exposed-modules:
        Internal.Prelude
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5

executable terminal
    import:
        common-extensions
      , common-options
      , common-prelude
    hs-source-dirs:
        src/terminal
    ghc-options:
        -threaded
    main-is:
        Main.hs
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , brick
      , monoid-subclasses
      , xin:internal

test-suite test
    import:
        common-extensions
      , common-options
      , common-prelude
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Algebra.ApportionSpec
        Algebra.Apportion.Old.ApportionSpec
        Algebra.Apportion.Old.BalancedSpec
        ChangeSpec
        Data.List.FractionSpec
        Test.Hspec.Unit
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Extended
        ValueSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , hspec
      , hspec-core
      , pretty-show
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups
      , quickcheck-instances
      , quickcheck-monoid-subclasses
      , quickcheck-quid
      , safe
      , xin
      , xin:internal

benchmark benchmark
    import:
        common-extensions
      , common-options
      , common-prelude
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , base >=4.7 && <5
      , tasty-bench
      , tasty-hunit
      , xin:internal
